--- a/artificial-intelligence.html
+++ b/artificial-intelligence.html
@@ -85,108 +85,87 @@
     </div>
 </section>
 
-<!--footer start -->
-<footer>
-    <div class="container">
-        <div class="row justify-content-center">
+    <!--footer start -->
+    <footer>
+        <div class="container">
+            <div class="row justify-content-center">
 
-            <div class="col-md-4 col-12">
-                <div class="footer_box">
-                    <div class="footer_header">
-                        <div class="footer_logo">
-                            <img src="assets/img/BudoApps.png" alt="evento" style="max-width:50%;">
+                <div class="col-md-4 col-12">
+                    <div class="footer_box">
+                        <div class="footer_header">
+                            <div class="footer_logo">
+                                <img src="assets/img/BudoApps.png" alt="evento" style="max-width:50%;">
+                            </div>
+                        </div>
+                        <div class="footer_box_body">
+                            <p>
+                                Request more information: support@budoapps.com
+                            </p>
+                            <ul class="footer_social">
+                                <li>
+                                    <a href="#"><i class="ion-social-pinterest"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="ion-social-facebook"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="ion-social-twitter"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="ion-social-dribbble"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="ion-social-instagram"></i></a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
-                    <div class="footer_box_body">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rhoncus massa nec gravida tempus. Integer iaculis in aazzzCurabitur a pulvinar nunc. Maecenas laoreet finibus lectus, at volutpat ligula euismod.
-                        </p>
-                        <ul class="footer_social">
-                            <li>
-                                <a href="#"><i class="ion-social-pinterest"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="ion-social-facebook"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="ion-social-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="ion-social-dribbble"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="ion-social-instagram"></i></a>
-                            </li>
-                        </ul>
+                </div>
+
+                <div class="col-12 col-md-4">
+                    <div class="footer_box">
+                        <div class="footer_header">
+                            <h4 class="footer_title">
+                                instagram
+                            </h4>
+                        </div>
+                        <div class="footer_box_body">
+                            <!-- Place <div> tag where you want the feed to appear -->
+                            <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank"
+                                    class="crt-logo crt-tag">Powered by Curator.io</a></div>
+                            <!-- The Javascript can be moved to the end of the html page before the </body> tag -->
+                            <script type="text/javascript">
+                                /* curator-feed-default-feed-layout */
+                                (function () {
+                                    var i, e, d = document, s = "script"; i = d.createElement("script"); i.async = 1; i.charset = "UTF-8";
+                                    i.src = "https://cdn.curator.io/published/69fa30d2-d8cb-4717-aa2a-ac17229bdf85.js";
+                                    e = d.getElementsByTagName(s)[0]; e.parentNode.insertBefore(i, e);
+                                })();
+                            </script>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="col-12 col-md-4">
-                <div class="footer_box">
-                    <div class="footer_header">
-                        <h4 class="footer_title">
-                            instagram
-                        </h4>
-                    </div>
-                    <div class="footer_box_body">
-                        <ul class="instagram_list">
-                            <li>
-                                <a href="#">
-                                    <img src="assets/img/cleander/c1.png" alt="instagram">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="assets/img/cleander/c2.png" alt="instagram">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="assets/img/cleander/c3.png" alt="instagram">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="assets/img/cleander/c3.png" alt="instagram">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="assets/img/cleander/c2.png" alt="instagram">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="assets/img/cleander/c1.png" alt="instagram">
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-12 col-md-4">
-                <div class="footer_box">
-                    <div class="footer_header">
-                        <h4 class="footer_title">
-                            subscribe to our newsletter
-                        </h4>
-                    </div>
-                    <div class="footer_box_body">
-                        <div class="newsletter_form">
-                            <input type="email" class="form-control" placeholder="E-Mail here">
-                            <button class="btn btn-rounded btn-block btn-primary">REQUEST INFORMATION</button>
+                <div class="col-12 col-md-4" id="contact">
+                    <div class="footer_box">
+                        <div class="footer_header">
+                            <h4 class="footer_title">
+                                Come Schedule a Call With Us
+                            </h4>
+                        </div>
+                        <div class="footer_box_body">
+                            <a href="https://calendly.com/budoapps/30min" target="_blank" class="newsletter_form">
+                                <button class="btn btn-rounded btn-block btn-primary">Schedule a Call</button>
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</footer>
+    </footer>
 
-</div>
-<!--footer end -->
+    </div>
+    <!--footer end -->
 
 <!-- jquery -->
 <script src="assets/js/jquery.min.js"></script>
