--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ event info end -->
 about the event end -->
 
     <!--services section-->
-    <section class="pb100" id="services">
+    <section id="services">
         <div class="container">
             <div class="section_title mb50" style="margin-top:100px">
                 <h3 class="title">
@@ -618,7 +618,7 @@ price section end -->
 event calender end -->
 
     <!--brands section -->
-    <section class="bg-gray pt100 pb100">
+    <!--<section class="bg-gray pt100 pb100">
         <div class="container">
             <div class="section_title mb50">
                 <h3 class="title">
@@ -644,34 +644,14 @@ event calender end -->
                 </div>
             </div>
         </div>
-    </section>
-    <!--brands section end-->
+    </section> -->
+    <!--brands section end -->
 
-    <!--get tickets section
-<section class="bg-img pt100 pb100" style="background-image: url('assets/img/bg/tickets.png');">
-    <div class="container">
-        <div class="section_title mb30">
-            <h3 class="title color-light">
-                GEt your tikets
-            </h3>
-        </div>
-        <div class="row justify-content-center align-items-center">
-            <div class="col-md-9 text-md-left text-center color-light">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rhoncus massa nec gravida tempus. Integer iaculis in aazzzCurabitur a pulvinar nunc. Maecenas laoreet finibus lectus, at volutpat ligula euismod.
-            </div>
-            <div class="col-md-3 text-md-right text-center">
-                <a href="#" class="btn btn-primary btn-rounded mt30">buy now</a>
-            </div>
-        </div>
-    </div>
-</section>
-get tickets section end-->
 
     <!--footer start -->
     <footer>
         <div class="container">
             <div class="row justify-content-center">
-
                 <div class="col-md-4 col-12">
                     <div class="footer_box">
                         <div class="footer_header">
@@ -736,9 +716,9 @@ get tickets section end-->
                             </h4>
                         </div>
                         <div class="footer_box_body">
-                            <div class="newsletter_form">
+                            <a href="https://calendly.com/budoapps/30min" target="_blank" class="newsletter_form">
                                 <button class="btn btn-rounded btn-block btn-primary">Schedule a Call</button>
-                            </div>
+                            </a>
                         </div>
                     </div>
                 </div>
