--- a/strategy.html
+++ b/strategy.html
@@ -76,7 +76,7 @@
         </div>
         <div class="row justify-content-center align-items-center">
             <div class="col-md-9 text-md-left text-center color-light">
-                There is always a starting point for building great applications and apps for your business. We use strategy assisted with AI technology to cover
+                There is always a starting point for building great applications and apps for your business. We use strategy assisted with AI technology covering
                 business and technical requirements to ensure your app aligns with your business objectives and minimize risks. We know how important it 
                 is for your idea to match the business and technical specifics that will be released to production.
             </div>
