--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ event info end -->
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-md-10">
-                    <h4 class="mb30 text-center color-light">DrinkLife Manager Beta Testing. Click <a href="#"><span
+                    <h4 class="mb30 text-center color-light">DrinkLife Manager Beta Testing. Click <a href="https://welcome.drinklifemobile.com" target="_blank"><span
                                 style="color:#EC1F28;font-size:24px;font-weight:bold">Here</span></a> to Learn More.
                     </h4>
                     <div class="countdown"></div>
