--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- ========== Title ========== -->
     <title>BudoApps</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/BudoApps.png">
+
     <!-- ========== Favicon Ico ========== -->
     <!--<link rel="icon" href="fav.ico">-->
     <!-- ========== STYLESHEETS ========== -->
