--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8CTKRVV8DY"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-8CTKRVV8DY');
+    </script>
     <!-- ========== Meta Tags ========== -->
     <meta charset="UTF-8">
     <meta name="description" content="Evento -Event Html Template">
@@ -199,7 +208,8 @@ event info end -->
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-md-10">
-                    <h4 class="mb30 text-center color-light">DrinkLife Manager Beta Testing. Click <a href="https://welcome.drinklifemobile.com" target="_blank"><span
+                    <h4 class="mb30 text-center color-light">DrinkLife Manager Beta Testing. Click <a
+                            href="https://welcome.drinklifemobile.com" target="_blank"><span
                                 style="color:#EC1F28;font-size:24px;font-weight:bold">Here</span></a> to Learn More.
                     </h4>
                     <div class="countdown"></div>
