--- a/mobile-apps.html
+++ b/mobile-apps.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8CTKRVV8DY"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-8CTKRVV8DY');
+    </script>
     <!-- ========== Meta Tags ========== -->
     <meta charset="UTF-8">
     <meta name="description" content="Evento -Event Html Template">
@@ -26,11 +36,12 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/main.css" rel="stylesheet">
 </head>
+
 <body>
-<div class="loader">
-    <div class="loader-outter"></div>
-    <div class="loader-inner"></div>
-</div>
+    <div class="loader">
+        <div class="loader-outter"></div>
+        <div class="loader-inner"></div>
+    </div>
 
     <!--header start here -->
     <header class="header navbar fixed-top navbar-expand-md">
@@ -67,24 +78,25 @@
 
 
 
-<section class="bg-img pt100 pb100" style="background-image: url('assets/img/speakers/bg6-dark.png');">
-    <div class="container" style="margin-top:50px">
-        <div class="section_title mb30">
-            <h3 class="title color-light">
-                Mobile Apps
-            </h3>
-        </div>
-        <div class="row justify-content-center align-items-center">
-            <div class="col-md-9 text-md-left text-center color-light">
-                We know you have an idea that is itching to hit the market. Let us bring your idea to life
-                in a mobile app. Our mobile app developers are highly skilled in various technolgy platforms. Your mobile app
-                will be released in various mobile app stores such as App Store, Google Play and Amazon. 
+    <section class="bg-img pt100 pb100" style="background-image: url('assets/img/speakers/bg6-dark.png');">
+        <div class="container" style="margin-top:50px">
+            <div class="section_title mb30">
+                <h3 class="title color-light">
+                    Mobile Apps
+                </h3>
+            </div>
+            <div class="row justify-content-center align-items-center">
+                <div class="col-md-9 text-md-left text-center color-light">
+                    We know you have an idea that is itching to hit the market. Let us bring your idea to life
+                    in a mobile app. Our mobile app developers are highly skilled in various technolgy platforms. Your
+                    mobile app
+                    will be released in various mobile app stores such as App Store, Google Play and Amazon.
+
+                </div>
 
             </div>
-
         </div>
-    </div>
-</section>
+    </section>
 
     <!--footer start -->
     <footer>
@@ -168,23 +180,24 @@
     </div>
     <!--footer end -->
 
-<!-- jquery -->
-<script src="assets/js/jquery.min.js"></script>
-<!-- bootstrap -->
-<script src="assets/js/popper.js"></script>
-<script src="assets/js/bootstrap.min.js"></script>
-<script src="assets/js/waypoints.min.js"></script>
-<!--slick carousel -->
-<script src="assets/js/owl.carousel.min.js"></script>
-<!--parallax -->
-<script src="assets/js/parallax.min.js"></script>
-<!--Counter up -->
-<script src="assets/js/jquery.counterup.min.js"></script>
-<!--Counter down -->
-<script src="assets/js/jquery.countdown.min.js"></script>
-<!-- WOW JS -->
-<script src="assets/js/wow.min.js"></script>
-<!-- Custom js -->
-<script src="assets/js/main.js"></script>
+    <!-- jquery -->
+    <script src="assets/js/jquery.min.js"></script>
+    <!-- bootstrap -->
+    <script src="assets/js/popper.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/waypoints.min.js"></script>
+    <!--slick carousel -->
+    <script src="assets/js/owl.carousel.min.js"></script>
+    <!--parallax -->
+    <script src="assets/js/parallax.min.js"></script>
+    <!--Counter up -->
+    <script src="assets/js/jquery.counterup.min.js"></script>
+    <!--Counter down -->
+    <script src="assets/js/jquery.countdown.min.js"></script>
+    <!-- WOW JS -->
+    <script src="assets/js/wow.min.js"></script>
+    <!-- Custom js -->
+    <script src="assets/js/main.js"></script>
 </body>
+
 </html>
