--- a/strategy.html
+++ b/strategy.html
@@ -3,13 +3,13 @@
 
 <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8CTKRVV8DY"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-09E9F5WL5G"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-8CTKRVV8DY');
+        gtag('config', 'G-09E9F5WL5G');
     </script>
     <!-- ========== Meta Tags ========== -->
     <meta charset="UTF-8">
