--- a/ai.html
+++ b/ai.html
@@ -82,15 +82,14 @@
         <div class="container" style="margin-top:50px">
             <div class="section_title mb30">
                 <h3 class="title color-light">
-                    Metaverse
+                    VR (Virtual Reality)
                 </h3>
             </div>
             <div class="row justify-content-center align-items-center">
                 <div class="col-md-9 text-md-left text-center color-light">
-                    Expand your horizons and take your business initiatives to the next level in Metaverse. Metaverse is
+                    Expand your horizons and take your business initiatives to the next level in VR(Virtual Reality). VR is
                     a virtual word which serves as an extension
-                    of the Internet. We build apps which interfaces Metaverse, strategically improving business
-                    positions.
+                    of the Internet. We build apps which interfaces VR, improving business strategies.
                 </div>
 
             </div>
