--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
     <!--cover section slider -->
     <section id="home" class="home-cover">
         <div class="cover_slider owl-carousel owl-theme">
-            <div class="cover_item" style="background: url('assets/img/bg/bg1-dark.jpg');">
+            <div class="cover_item" style="background: url('assets/img/bg/ai.png');">
                 <div class="slider_content">
                     <div class="slider-content-inner">
                         <div class="container">
                             <div class="slider-content-center">
                                 <h2 class="cover-title">
-                                    Optimize your business with
+                                    AI Solutions for your Business
                                 </h2>
-                                <strong class="cover-xl-text">Metaverse</strong>
+                                <strong class="cover-xl-text">AI</strong>
 
                             </div>
                         </div>
@@ -203,14 +203,14 @@ event info end -->
 
 
     <!--event countdown -->
-    <section class="bg-img pt70 pb70" style="background-image: url('assets/img/bg/bg4.png');">
+    <section class="bg-img pt70 pb70" style="background-image: url('assets/img/bg/trinkess.png');">
         <div class="overlay_dark"></div>
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-md-10">
-                    <h4 class="mb30 text-center color-light">DrinkLife Manager Beta Testing. Click <a
+                    <h4 class="mb30 text-center color-light">Trinkess iOS/Android Beta Tests <!--<a
                             href="https://welcome.drinklifemobile.com" target="_blank"><span
-                                style="color:#EC1F28;font-size:24px;font-weight:bold">Here</span></a> to Learn More.
+                                style="color:#EC1F28;font-size:24px;font-weight:bold">Here</span></a> to Learn More. -->
                     </h4>
                     <div class="countdown"></div>
                 </div>
@@ -352,9 +352,9 @@ about the event end -->
                 <div class="speaker_box">
                     <div class="speaker_img">
                         <img src="assets/img/speakers/bg8.png" alt="speaker name">
-                        <a href="metaverse.html">
+                        <a href="ai.html">
                             <div class="info_box">
-                                <h5 class="name">Metaverse</h5>
+                                <h5 class="name">Virtual Reality</h5>
                                 <p class="position">Read More</p>
                             </div>
                         </a>
@@ -365,7 +365,7 @@ about the event end -->
                 <div class="speaker_box">
                     <div class="speaker_img">
                         <img src="assets/img/speakers/b9.png" alt="speaker name">
-                        <a href="artificial-intelligence.html">
+                        <a href="ai.html">
                             <div class="info_box">
                                 <h5 class="name">Artificial Intelligence</h5>
                                 <p class="position">Read More</p>
@@ -676,7 +676,7 @@ event calender end -->
                                 Request more information: support@budoapps.com
                             </p>
                             <ul class="footer_social">
-                                <li>
+                                <!--<li>
                                     <a href="#"><i class="ion-social-pinterest"></i></a>
                                 </li>
                                 <li>
@@ -687,9 +687,9 @@ event calender end -->
                                 </li>
                                 <li>
                                     <a href="#"><i class="ion-social-dribbble"></i></a>
-                                </li>
+                                </li> -->
                                 <li>
-                                    <a href="#"><i class="ion-social-instagram"></i></a>
+                                    <a href="https://www.instagram.com/budoapps/?hl=en"><i class="ion-social-instagram"></i></a>
                                 </li>
                             </ul>
                         </div>
