--- a/news.html
+++ b/news.html
@@ -346,12 +346,10 @@
                         </div>
                         <div class="footer_box_body">
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rhoncus massa nec gravida
-                                tempus. Integer iaculis in aazzzCurabitur a pulvinar nunc. Maecenas laoreet finibus
-                                lectus, at volutpat ligula euismod.
+                                Request more information: support@budoapps.com
                             </p>
                             <ul class="footer_social">
-                                <li>
+                                <!--<li>
                                     <a href="#"><i class="ion-social-pinterest"></i></a>
                                 </li>
                                 <li>
@@ -362,13 +360,12 @@
                                 </li>
                                 <li>
                                     <a href="#"><i class="ion-social-dribbble"></i></a>
-                                </li>
+                                </li> -->
                                 <li>
-                                    <a href="#"><i class="ion-social-instagram"></i></a>
+                                    <a href="https://www.instagram.com/budoapps/?hl=en"><i class="ion-social-instagram"></i></a>
                                 </li>
                             </ul>
-                        </div>
-                    </div>
+                        </div>                    </div>
                 </div>
 
                 <div class="col-12 col-md-4">
