--- a/ai.html
+++ b/ai.html
@@ -18,7 +18,7 @@
     <meta name="author" content="ColorLib">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- ========== Title ========== -->
-    <title>Metaverse</title>
+    <title>Video Games</title>
     <!-- ========== Favicon Ico ========== -->
     <!--<link rel="icon" href="fav.ico">-->
     <!-- ========== STYLESHEETS ========== -->
@@ -78,18 +78,20 @@
 
 
 
-    <section class="bg-img pt100 pb100" style="background-image: url('assets/img/speakers/bg8-dark.png');">
+    <section class="bg-img pt100 pb100" style="background-image: url('assets/img/speakers/b9-dark.png');">
         <div class="container" style="margin-top:50px">
             <div class="section_title mb30">
                 <h3 class="title color-light">
-                    VR (Virtual Reality)
+                    Artificial Intelligence
                 </h3>
             </div>
             <div class="row justify-content-center align-items-center">
                 <div class="col-md-9 text-md-left text-center color-light">
-                    Expand your horizons and take your business initiatives to the next level in VR(Virtual Reality). VR is
-                    a virtual word which serves as an extension
-                    of the Internet. We build apps which interfaces VR, improving business strategies.
+                    Leverage artificial intelligence and machine learning for daily business operations, increasing
+                    efficieny in workflows. We build
+                    a wide range of apps to accomodate various use cases using AI. Our AI apps cover all business
+                    sectors to accomodate your business needs.
+
                 </div>
 
             </div>
