--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ about the event end -->
                 <div class="speaker_box">
                     <div class="speaker_img">
                         <img src="assets/img/speakers/bg8.png" alt="speaker name">
-                        <a href="ai.html">
+                        <a href="vr.html">
                             <div class="info_box">
                                 <h5 class="name">Virtual Reality</h5>
                                 <p class="position">Read More</p>
