--- a/mobile-apps.html
+++ b/mobile-apps.html
@@ -115,7 +115,7 @@
                                 Request more information: support@budoapps.com
                             </p>
                             <ul class="footer_social">
-                                <li>
+                                <!--<li>
                                     <a href="#"><i class="ion-social-pinterest"></i></a>
                                 </li>
                                 <li>
@@ -126,13 +126,12 @@
                                 </li>
                                 <li>
                                     <a href="#"><i class="ion-social-dribbble"></i></a>
-                                </li>
+                                </li> -->
                                 <li>
-                                    <a href="#"><i class="ion-social-instagram"></i></a>
+                                    <a href="https://www.instagram.com/budoapps/?hl=en"><i class="ion-social-instagram"></i></a>
                                 </li>
                             </ul>
-                        </div>
-                    </div>
+                        </div>                    </div>
                 </div>
 
                 <div class="col-12 col-md-4">
