--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-
         gtag('config', 'G-09E9F5WL5G');
     </script>
     <!-- ========== Meta Tags ========== -->
     <meta charset="UTF-8">
-    <meta name="description" content="Evento -Event Html Template">
-    <meta name="keywords" content="Evento , Event , Html, Template">
-    <meta name="author" content="ColorLib">
+    <meta name="description" content="BudoApps">
+    <meta name="keywords" content="BudoApps">
+    <meta name="author" content="BudoApps">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- ========== Title ========== -->
     <title>BudoApps</title>
