--- a/index.html
+++ b/index.html
@@ -202,20 +202,18 @@ event info end -->
 
 
     <!--event countdown -->
-    <section class="bg-img pt70 pb70" style="background-image: url('assets/img/bg/trinkess.png');">
+   <!-- <section class="bg-img pt70 pb70" style="background-image: url('assets/img/bg/trinkess.png');">
         <div class="overlay_dark"></div>
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-md-10">
-                    <h4 class="mb30 text-center color-light">Trinkess iOS/Android Beta Tests <!--<a
-                            href="https://welcome.drinklifemobile.com" target="_blank"><span
-                                style="color:#EC1F28;font-size:24px;font-weight:bold">Here</span></a> to Learn More. -->
+                    <h4 class="mb30 text-center color-light">Trinkess iOS/Android Beta Tests 
                     </h4>
                     <div class="countdown"></div>
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--event count down end-->
 
 
@@ -723,7 +721,7 @@ event calender end -->
                     <div class="footer_box">
                         <div class="footer_header">
                             <h4 class="footer_title">
-                                Come Schedule a Call With Us
+                                Schedule a Free Consulation
                             </h4>
                         </div>
                         <div class="footer_box_body">
