--- a/vr.html
+++ b/vr.html
@@ -88,7 +88,7 @@
             <div class="row justify-content-center align-items-center">
                 <div class="col-md-9 text-md-left text-center color-light">
                     Expand your horizons and take your business initiatives to the next level in VR(Virtual Reality). VR is
-                    a virtual word which serves as an extension
+                    a virtual world which serves as an extension
                     of the Internet. We build apps which interfaces VR, improving business strategies.
                 </div>
 
