--- a/migrations.html
+++ b/migrations.html
@@ -3,13 +3,13 @@
 
 <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-09E9F5WL5G"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YF1VK7TB2M"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-        gtag('config', 'G-09E9F5WL5G');
+    gtag('config', 'G-YF1VK7TB2M');
     </script>
     <!-- ========== Meta Tags ========== -->
     <meta charset="UTF-8">
